Fix portfolio preview images on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2046,7 +2046,7 @@ clip-path: polygon(
   }
 
   .project-image {
-    height: auto;
+    height: 380px;
     aspect-ratio: 16 / 9;
     overflow: hidden;
     container-type: inline-size;
